--- a/Starter_Code (4)/Starter_Code/part_1_mars_news.ipynb
+++ b/Starter_Code (4)/Starter_Code/part_1_mars_news.ipynb
@@ -22,13 +22,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ChromeDriver in c:\\users\\willi\\anaconda3\\envs\\pythondata\\lib\\site-packages (2.24.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ChromeDriver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/c/Users/willi/anaconda3/envs/pythondata/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "which: no ChromeDriver in (/c/Users/willi/anaconda3/envs/pythondata:/c/Users/willi/anaconda3/envs/pythondata/Library/mingw-w64/bin:/c/Users/willi/anaconda3/envs/pythondata/Library/usr/bin:/c/Users/willi/anaconda3/envs/pythondata/Library/bin:/c/Users/willi/anaconda3/envs/pythondata/Scripts:/c/Users/willi/anaconda3/envs/pythondata/bin:/c/Users/willi/anaconda3/condabin:/c/Users/willi/bin:/mingw64/bin:/usr/local/bin:/usr/bin:/usr/bin:/mingw64/bin:/usr/bin:/c/Users/willi/bin:/c/WINDOWS/system32:/c/WINDOWS:/c/WINDOWS/System32/Wbem:/c/WINDOWS/System32/WindowsPowerShell/v1.0:/c/WINDOWS/System32/OpenSSH:/c/Program Files/Intel/WiFi/bin:/c/Program Files/Common Files/Intel/WirelessCommon:/cmd:/c/Users/willi/anaconda3:/c/Users/willi/anaconda3/Library/mingw-w64/bin:/c/Users/willi/anaconda3/Library/usr/bin:/c/Users/willi/anaconda3/Library/bin:/c/Users/willi/anaconda3/Scripts:/c/Users/willi/AppData/Local/Microsoft/WindowsApps:/c/Users/willi/AppData/Local/Programs/Microsoft VS Code/bin:/c/Users/willi/AppData/Local/Programs/mongosh:/usr/bin/vendor_perl:/usr/bin/core_perl)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which ChromeDriver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\uXXXX escape (3903723504.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [10]\u001b[1;36m\u001b[0m\n\u001b[1;33m    executable_path = {'executable_path': 'c:\\users\\willi\\anaconda3\\envs\\pythondata\\lib\\site-packages (2.24.1)'}\u001b[0m\n\u001b[1;37m                                                                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\uXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "executable_path = {'executable_path': 'c:\\users\\willi\\anaconda3\\envs\\pythondata\\lib\\site-packages (2.24.1)'}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
@@ -45,11 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (824477549.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [14]\u001b[1;36m\u001b[0m\n\u001b[1;33m    url = https://redplanetscience.com\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Visit the Mars NASA news site: https://redplanetscience.com\n"
+    "# Visit the Mars NASA news site: https://redplanetscience.com\n",
+    "\n",
+    "url = https://redplanetscience.com"
    ]
   },
   {
@@ -63,20 +136,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'browser' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create a Beautiful Soup object\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mbrowser\u001b[49m\u001b[38;5;241m.\u001b[39mvisit(url)\n\u001b[0;32m      3\u001b[0m html \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mhtml\n\u001b[0;32m      4\u001b[0m news_soup \u001b[38;5;241m=\u001b[39m soup(html, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'browser' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "browser.visit(url)\n",
+    "html = browser.html\n",
+    "news_soup = soup(html, 'html.parser')\n",
+    "type(news_soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "news_title = news_soup.find_all('div', class_='content_title')\n",
+    "news_title"
    ]
   },
   {
@@ -101,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,56 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'title': \"Common Questions about InSight's 'Mole'\",\n",
-       "  'preview': 'The following Q&As with members of the team answer some of the most common questions about the burrowing device, part of a science instrument called the Heat Flow and Physical Properties Package (HP3).'},\n",
-       " {'title': \"NASA's InSight Flexes Its Arm While Its 'Mole' Hits Pause\",\n",
-       "  'preview': \"Now that the lander's robotic arm has helped the mole get underground, it will resume science activities that have been on hold.\"},\n",
-       " {'title': \"NASA's Perseverance Rover Will Peer Beneath Mars' Surface \",\n",
-       "  'preview': \"The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \"},\n",
-       " {'title': \"NASA's Mars Rover Drivers Need Your Help\",\n",
-       "  'preview': 'Using an online tool to label Martian terrain types, you can train an artificial intelligence algorithm that could improve the way engineers guide the Curiosity rover.'},\n",
-       " {'title': 'NASA Invites Public to Share Excitement of Mars 2020 Perseverance Rover Launch',\n",
-       "  'preview': 'There are lots of ways to participate in the historic event, which is targeted for July 30.'},\n",
-       " {'title': \"NASA's Mars 2020 Rover Completes Its First Drive\",\n",
-       "  'preview': 'In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.'},\n",
-       " {'title': 'Two of a Space Kind: Apollo 12 and Mars 2020',\n",
-       "  'preview': 'Apollo 12 and the upcoming Mars 2020 mission may be separated by half a century, but they share several goals unique in the annals of space exploration.'},\n",
-       " {'title': \"3 Things We've Learned From NASA's Mars InSight \",\n",
-       "  'preview': 'Scientists are finding new mysteries since the geophysics mission landed two years ago.'},\n",
-       " {'title': 'Global Storms on Mars Launch Dust Towers Into the Sky',\n",
-       "  'preview': 'A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.'},\n",
-       " {'title': 'NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget',\n",
-       "  'preview': \"Jim Bridenstine addresses NASA's ambitious plans for the coming years, including Mars Sample Return.\"},\n",
-       " {'title': \"NASA's Perseverance Rover Will Carry First Spacesuit Materials to Mars\",\n",
-       "  'preview': 'In a Q&A, spacesuit designer Amy Ross explains how five samples, including a piece of helmet visor, will be tested aboard the rover, which is targeting a July 30 launch. '},\n",
-       " {'title': \"NASA's Mars 2020 Rover Closer to Getting Its Name\",\n",
-       "  'preview': \"155 students from across the U.S. have been chosen as semifinalists in NASA's essay contest to name the Mars 2020 rover, and see it launch from Cape Canaveral this July.\"},\n",
-       " {'title': \"NASA's Mars Helicopter Attached to Mars 2020 Rover \",\n",
-       "  'preview': 'The helicopter will be first aircraft to perform flight tests on another planet.'},\n",
-       " {'title': \"InSight's 'Mole' Team Peers into the Pit\",\n",
-       "  'preview': 'Efforts to save the heat probe continue.'},\n",
-       " {'title': \"Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\",\n",
-       "  'preview': 'As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.'}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the list to confirm success\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pythondata",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
